[project]
name = "markdownmcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.13",
    "google-genai>=1.19.0",
    "langchain-anthropic>=1.3.0",
    "langchain-google-vertexai>=3.2.0",
    "langchain[anthropic,google-genai]>=1.1.3",
    "mcp>=1.9.4",
]
